--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -139,7 +139,7 @@
                     {
                    
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="TraderProducts" asp-controller="Product">
+                        <a class="nav-link text-white " asp-action="GetTraderCategory" asp-controller="Product">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-brands fa-product-hunt"></i>
                             </div>
