--- a/ArtStation_Dashboard/Views/Product/PartialView/_SizePartialView.cshtml
+++ b/ArtStation_Dashboard/Views/Product/PartialView/_SizePartialView.cshtml
@@ -12,21 +12,21 @@
 
     <div class="row g-3 align-items-end">
         <div class="col-md-4">
-            <div class="input-group input-group-static">
-                <label class="form-label">@(("الحجم باللغه العربية", "Size in Arabic").Localize(language))</label>
+            <div class="input-group input-group-static mb-4">
+                <label >@(("الحجم باللغه العربية", "Size in Arabic").Localize(language))</label>
                 <input type="text" id="sizeAR" class="form-control" />
             </div>
         </div>
         <div class="col-md-4">
-            <div class="input-group input-group-static">
-                <label class="form-label">@(("الحجم باللغه الإنجليزية", "Size in English").Localize(language))</label>
+            <div class="input-group input-group-static mb-4">
+                <label>@(("الحجم باللغه الإنجليزية", "Size in English").Localize(language))</label>
                 <input type="text" id="sizeEN" class="form-control" />
             </div>
         </div>
         <div class="col-md-4">
-            <div class="input-group input-group-static">
-                <label class="form-label">@(("سعر المنتج بهذا الحجم", "Product price for this size").Localize(language))</label>
-                <input type="number" step="0.01" id="sizePrice" class="form-control" />
+            <div class="input-group input-group-static mb-4">
+                <label >@(("سعر المنتج بهذا الحجم", "Product price for this size").Localize(language))</label>
+                <input type="number" step="0.01" min="0.01" id="sizePrice" class="form-control" />
             </div>
         </div>
         <div class="col-md-3 d-flex align-items-end">
@@ -44,16 +44,22 @@
         <input type="hidden" name="Sizes[@i].Id" value="@Model.Sizes[i].Id" />
         <div class="row g-3 align-items-end mb-2 border p-3 rounded bg-light size-row">
             <div class="col-md-3">
-                <label class="form-label">@(("الحجم بالعربية", "Size (AR)").Localize(language))</label>
+                <div class="input-group input-group-static mb-4">
+                <label >@(("الحجم بالعربية", "Size (AR)").Localize(language))</label>
                 <input type="text" name="Sizes[@i].SizeAR" class="form-control" value="@Model.Sizes[i].SizeAR" />
+                </div>
             </div>
             <div class="col-md-3">
-                <label class="form-label">@(("الحجم بالإنجليزية", "Size (EN)").Localize(language))</label>
+                <div class="input-group input-group-static mb-4">
+                <label >@(("الحجم بالإنجليزية", "Size (EN)").Localize(language))</label>
                 <input type="text" name="Sizes[@i].SizeEN" class="form-control" value="@Model.Sizes[i].SizeEN" />
+                </div>
             </div>
             <div class="col-md-3">
-                <label class="form-label">@(("السعر", "Price").Localize(language))</label>
-                <input type="number" step="0.01" name="Sizes[@i].Price" class="form-control" value="@Model.Sizes[i].Price" />
+                <div class="input-group input-group-static mb-4">
+                <label>@(("السعر", "Price").Localize(language))</label>
+                <input type="number" step="0.01" min="0.01" name="Sizes[@i].Price" class="form-control" value="@Model.Sizes[i].Price" />
+                </div>
             </div>
             <div class="col-md-3 d-flex align-items-end">
                 <button type="button" class="btn btn-danger w-100 deleteSizeBtn">@(("حذف", "Delete").Localize(language))</button>
@@ -89,7 +95,10 @@
             alert("Please fill in all fields.");
             return;
         }
-
+        if (parseFloat(price) <= 0 || isNaN(parseFloat(price))) {
+            alert("Price must be a positive number.");
+            return;
+        }
         const wrapper = document.createElement("div");
         wrapper.className = "row g-3 align-items-end mb-2 border p-2 rounded bg-light size-row";
         wrapper.innerHTML = `
