--- a/ArtStation_Dashboard/Views/Shared/_Navbar.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_Navbar.cshtml
@@ -14,19 +14,16 @@
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-                <div class="input-group input-group-outline">
-                    <label class="form-label">Type here...</label>
-                    <input type="text" class="form-control">
-                </div>
+                
             </div>
             <ul class="navbar-nav  justify-content-end">
                 <li class="nav-item d-flex align-items-center"> 
-                    <button type="button" class="btn bg-gradient-secondary btn-tooltip" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Tooltip on bottom" data-container="body" data-animation="true">
+                    <a type="button" class="btn bg-gradient-secondary btn-tooltip" asp-action="Logout" asp-controller="Auth" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Tooltip on bottom" data-container="body" data-animation="true">
                         <span class="">
                             <i class="fa-solid fa-user me-sm-1"></i>
-                            <a asp-action="Logout" asp-controller="Auth">@(("تسجيل الخروج", "Logout").Localize(lang))</a></span>
+                             @(("تسجيل الخروج", "Logout").Localize(lang))</span>
                        
-                    </button>
+                    </a>
                         @* <i class="fa fa-user me-sm-1"></i> *@
                         @* <span class="d-sm-inline d-none ms-2 me-2"><a asp-action="Logout" asp-controller="Auth">@(("تسجيل الخروج", "Logout").Localize(lang))</a></span> *@
                     
