Edit IN productOfSpecificOrder / Edit in order details view

--- a/ArtStation_Dashboard/Views/Trader/ChangePassword.cshtml
+++ b/ArtStation_Dashboard/Views/Trader/ChangePassword.cshtml
@@ -6,7 +6,7 @@
     var dir = culture.TextInfo.IsRightToLeft ? "rtl" : "ltr";
     var lang = culture.Name;
     bool isRtl = System.Globalization.CultureInfo.CurrentUICulture.TextInfo.IsRightToLeft;
-    string iconPositionClass = isRtl ? "start-0 ms-3" : "end-0 me-3";
+    string iconPositionClass = isRtl ? "end-0 me-3" : "start-0 ms-3";
 }
 <div class="container my-auto mt-5">
     <div class="row">
