--- a/ArtStation_Dashboard/Views/Trader/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Trader/Index.cshtml
@@ -21,7 +21,7 @@
 }
 
 
-<div class=" w-50 m-auto">
+<div class="d-flex justify-content-center my-3">
     <label class="form-label">  @(("بحث", "Search").Localize(lang))</label>
     <div class="input-group input-group-outline my-3 w-50">
 
