--- a/ArtStation_Dashboard/Views/Product/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Product/Index.cshtml
@@ -3,17 +3,33 @@
     var language = ViewData["Language"] as string ?? "en";
 }
 
-
+<style>
+.filter-products{
+        min-width: 300px;
+        padding: 6px 23px;
+        border-radius: 8px;
+        border: 1px solid #ced4da;
+        background-color: #fff;
+        font-weight: 500;
+        transition: all 0.2s ease-in-out;
+        padding: 10px;
+}
+.filter-products:focus{
+     border-color: #4e73df; /* Primary color */
+ box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
+}
+</style>
 <div class="container my-4">
     <div class="row justify-content-center g-3">
         <!-- Search Input -->
-        <div class="col-md-5">
+        <div class="col-md-4">
             <div class="input-group">
-                <span class="input-group-text bg-white text-primary">
+                <span class="input-group-text bg-white text-primary " >
                     <i class="fas fa-search"></i>
                 </span>
                 <input type="text" id="searchInput"
-                       class="form-control text-center fw-bolder bg-white text-primary"
+                       style="border-radius:8px ; padding-left: 10px;"
+                       class="form-control  bg-white text-secondary"
                        placeholder="@(("ابحث باسم المنتج", "Search by product name").Localize(language))" />
             </div>
         </div>
@@ -21,7 +37,7 @@
         <!-- Category Filter -->
         <div class="col-md-4">
             <select id="categoryFilter"
-                    class="form-select text-center fw-bolder bg-white text-primary">
+                    class="filter-products fw-bolder bg-white text-secondary">
                 <option value="">@(("تصفية حسب الفئة", "Filter by category").Localize(language))</option>
                 @foreach (var cat in Model)
                 {
