--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -579,6 +579,8 @@
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="~/assets/js/material-dashboard.min.js?v=3.0.0"></script>
